[package]
name = "tw"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"
description = "Your todos, as your wallpaper"
license = "MIT"

[dependencies]
ab_glyph = "0.2.28"
anyhow = "1.0.86"
clap = "4.5.16"
dotenv = "0.15.0"
homedir = "0.3.3"
image = "0.25.2"
imageproc = "0.25.0"
reqwest = { version = "0.12.7", features = ["json"] }
rusttype = "0.9.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
color-eyre = "0.6"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
